# fragrance-data

./: README.md  collect_missing_data.py  dynamic-fragrance-data.jsonl  errors.csv  perfumes.csv  perfumes.jsonl  perfumes_table_snapshot.csv  pyproject.toml  static-fragrance-data.jsonl  test_collect_missing_data.py
.github/workflows/: fetch-static-fragrance-data.yaml
data/classification/: 19_69 - La Habana.html  27 87 Perfumes - Mosaique.html  27 87 Perfumes - Wandervogel.html  4711 - Echt Kolnisch Wasser - Eau de Cologne.html  Acqua di Parma - Colonia Club - Eau de Cologne.html  Acqua di Parma - Colonia Essenza - Eau de Cologne.html  Acqua di Parma - Colonia Leather - Eau de Cologne Concentree.html  Acqua di Parma - Fico di Amalfi.html  Acqua di Parma - Yuzu.html  Aedes de Venustas - Cafe Tabac.html  Aedes de Venustas - Copal Azur.html  Aedes de Venustas - Encens Japonais.html  Akro - Awake.html  Al Haramain _  - Amber Oud Tobacco Edition.html  Amouage - Journey Man.html  Amouage - Memoir Man.html  Amouage - Opus XIV _ Royal Tobacco.html  Andrea Maack - Coven.html  Aramis - Aramis Classic Reserve.html  Armaf - Club de Nuit Intense Man - Eau de Toilette.html  Arquiste - Nanban.html  Atelier Cologne - Cafe Tuberosa.html  Atelier Cologne - Cedrat Enivrant.html  Atelier Cologne - Orange Sanguine.html  Azya - Jalua.html  Azzaro - Wanted by Night.html  Bentley - Bentley for Men Intense.html  Berdoues - Assam of India.html  Bon Parfumeur - 403 Myrrh Shadow.html  Bon Parfumeur - 603 Cuir Encens Feve Tonka.html  Bottega Veneta - Bottega Veneta pour Homme - Eau de Toilette.html  (+306 more)
(+685 files in other folders)
